Adjusted gradients to look more like style guide. Corrected right aligned headers on mobile site. Created color-background variable and changed from a lightened dark-maroon to a lighter orange based off of the $light-orange variable.

--- a/public_html/scss/style.scss
+++ b/public_html/scss/style.scss
@@ -5,8 +5,10 @@ $light-pink: #fcfaf7;
 $dark-maroon: #a67e7b;
 $light-orange: #ffd762;
 $medium-blue: #086fb8;
+$color-background: #f8f6ea;
 $medium-screen: 47em;
-$gradient-background: linear-gradient(90deg, #ffd762, #086fb8);
+$gradient-background-lr: linear-gradient(90deg, #086fb8, #086fb8, #ffd762, #086fb8, #086fb8, #086fb8);
+$gradient-background-rl: linear-gradient(-90deg, #086fb8, #086fb8, #ffd762, #086fb8, #086fb8, #086fb8);
 $polygon-lr: polygon(45% 0%, 100% 0, 100% 100%, 45% 100%, 0 50%);
 $polygon-rl: polygon(55% 100%, 0 100%, 0 0, 55% 0, 100% 50%);
 
@@ -154,9 +156,9 @@ header {
 }
 
 .preamble {
-    border-top: 1px solid $dark-grey;
-    border-bottom: 1px solid $dark-grey;
-    background-color: lighten($dark-maroon, 15%);
+/*    border-top: 1px solid $dark-grey;
+    border-bottom: 1px solid $dark-grey;*/
+    background-color: $color-background;
 
     h3 {
         border-bottom: 1px solid $dark-grey;
@@ -198,25 +200,31 @@ header {
             clip-path: $polygon-lr;
             justify-self: center;
             opacity: 0.5;
-            background-image: $gradient-background;
+            background-image: $gradient-background-lr;
         }
     }
 }
 
 .explanation {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 55% 45%;
     grid-template-rows: auto auto auto;
-    border-bottom: 1px solid $dark-grey;
-    background-color: lighten($dark-maroon, 15%);
+/*    border-bottom: 1px solid $dark-grey;*/
+    background-color: $color-background;
+    
+    h3 {
+        grid-column-start: 2;
+        border-bottom: 1px solid #383c4a;
+        border-left: 1px solid #383c4a;
+    }
 
     :nth-child(2) {
-        grid-column: 1/3;
+        grid-column: 1 / 3;
         padding-top: 1em;
     }
 
     :nth-child(3) {
-        grid-column: 1/3;
+        grid-column: 1 / 3;
         grid-row: 2 / 3;
     }
 
@@ -228,11 +236,11 @@ header {
     @media only screen and (min-width: $medium-screen) {
         & {
             display: grid;
-            grid-template-columns: 28% 28% 44%;
+            grid-template-columns: 1fr 1fr 1fr;
             grid-template-rows: auto auto auto;
         }
         h3 {
-           grid-area: 1 / 3 / span 1 / span 1;
+            grid-area: 1 / 3 / span 1 / span 1;
             padding-bottom: 0;
             align-self: end;
             justify-self: center;
@@ -251,14 +259,14 @@ header {
             clip-path: $polygon-rl;
             justify-self: center;
             opacity: 0.5;
-            background-image: $gradient-background;
+            background-image: $gradient-background-rl;
         }        
     }
 }
 
 .participation {
-    border-bottom: 1px solid $dark-grey;
-    background-color: lighten($dark-maroon, 15%);
+/*    border-bottom: 1px solid $dark-grey;*/
+    background-color: $color-background;
 
     h3 {
         border-bottom: 1px solid $dark-grey;
@@ -301,7 +309,7 @@ header {
             clip-path: $polygon-lr;
             justify-self: center;
             opacity: 0.5;
-            background-image: $gradient-background;
+            background-image: $gradient-background-lr;
         }        
     }
 }
@@ -311,7 +319,13 @@ header {
     grid-template-columns: 75% 25%;
     grid-template-rows: auto auto;
     border-bottom: 1px solid $dark-grey;
-    background-color: lighten($dark-maroon, 15%);
+    background-color: $color-background;
+    
+    h3 {
+        grid-column-start: 2;
+        border-bottom: 1px solid #383c4a;
+        border-left: 1px solid #383c4a;
+    }
 
     :nth-child(2) {
         grid-column: 1/3;
@@ -330,7 +344,7 @@ header {
             grid-row-start: 4;
             justify-self: end;
 
-            :nth-child(1) {
+            h3 {
                 grid-column-start: 2;
                 grid-row-start: 1;
                 justify-self: end;
@@ -347,7 +361,7 @@ header {
 
 .requirements {
     border-bottom: 1px solid $dark-grey;
-    background-color: lighten($dark-maroon, 15%);
+    background-color: $color-background;
 
     h3 {
         border-bottom: 1px solid $dark-grey;
@@ -394,7 +408,7 @@ header {
             clip-path: $polygon-rl;
             justify-self: center;
             opacity: 0.5;
-            background-image: $gradient-background;
+            background-image: $gradient-background-rl;
         }        
     }
 }
@@ -406,7 +420,7 @@ header {
    font-size: 1em;
    @media only screen and (min-width: $medium-screen){
       & {
-         border-top: 1px solid $dark-grey;
+/*         border-top: 1px solid $dark-grey;*/
          padding-top: 1em;
          text-align: left !important;
       }
@@ -415,7 +429,7 @@ header {
 
 
 aside {
-    background-color: lighten($light-orange, 30%);
+    background-color: $color-background;
     padding-bottom: 6em;
     h3 {
         
